fixing table cell alignment

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -23,6 +23,10 @@ table{
 	margin: 0 auto;
 }
 
+td{
+	text-align: center;
+}
+
 .row{
 	display: block;
 	width: 100%;
